--- a/angular.json
+++ b/angular.json
@@ -131,5 +131,8 @@
       }
     }
   },
-  "defaultProject": "pcws-viewer"
+  "defaultProject": "pcws-viewer",
+  "cli": {
+    "analytics": false
+  }
 }
